fix hero overlapping introduction section

--- a/projects/adviceProject/style/css/previewPageStyle.css
+++ b/projects/adviceProject/style/css/previewPageStyle.css
@@ -95,7 +95,7 @@ main #intro .pageIntroduction .introductionContainer {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 400px;
+    min-height: 400px;
 }
 
 main #intro .pageIntroduction .introductionContainer .pageInfo {
@@ -113,6 +113,7 @@ h1 {
     font-size: 2.5rem;
     font-weight: 650;
     color: #0e0e0e;
+    text-align: center;
 }
 
 main #intro .pageIntroduction .introductionContainer .pageInfo p {
