--- a/projects/giftLandingProject/style/previewPageStyle.css
+++ b/projects/giftLandingProject/style/previewPageStyle.css
@@ -90,7 +90,7 @@ main #intro .pageIntroduction .introductionContainer {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
 }
 
 main #intro .pageIntroduction .introductionContainer .pageInfo {
@@ -107,6 +107,7 @@ h1 {
     font-size: 2.5rem;
     font-weight: 650;
     color: #0e0e0e;
+    text-align: center;
 }
 
 main #intro .pageIntroduction .introductionContainer .pageInfo p {
